--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@ AWS_S3_SECRET=<somevalue>
 AWS_BUCKET=<somevalue>
 DATABASE_URL=<somevalue>
 BUILDPACK_URL=https://github.com/ddollar/heroku-buildpack-multi.git
-LD_LIBRARY_PATH=/app/lib
+LD_LIBRARY_PATH=/app/bin/geos/lib:/app/bin/proj/lib:/app/lib
