Include pusher dependency

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ AWS_BUCKET=<somevalue>
 DATABASE_URL=<somevalue>
 BUILDPACK_URL=https://github.com/ddollar/heroku-buildpack-multi.git
 LD_LIBRARY_PATH=/app/bin/geos/lib:/app/bin/proj/lib:/app/lib
+PUSHER_APP_ID=<somevalue>
+PUSHER_KEY=<somevalue>
+PUSHER_SECRET=<somevalue>
